<resources>
    <string name="app_name">施肥</string>
    <string name="feiliaoxiaozhishi">肥料小知识</string>
    <string name="zhuyao_radiobutton">定位</string>
    <string name="back">返回</string>
    <string name="shezhi">设置</string>


    <!-- 我的信息Fragment -->
    <string name="wodexinxi_radiobutton">我</string>
    <string name="wodexinxi_title_centertext">我的信息</string>
    <string name="more">更多</string>
    <string name="login">点击头像登录</string>
    <string name="wodexinxi_shangchuan">我的数据</string>
    <string name="wodexinxi_shoucang">我的收藏</string>

    <!--主要业务Fragment-->
    <string name="zhuyao_title_centertext">主要业务</string>
    <string name="zhuyao_title_righttext">数据采集</string>

    <!--左边Fragment-->
    <string name="paihang_radiobutton">小知识</string>

    <!-- 注册登录 -->
    <!--    <string name="username">邮 箱:</string>-->
    <string name="password">密 码:</string>
    <string name="login_button">登  录</string>
    <string name="register_button">注  册</string>
    <string name="username_hint">请输入邮箱账号</string>
    <string name="password_hint">只能输入英文和数字</string>
    <string name="welcome_login">欢迎登录！</string>
    <string name="welcome_register">欢迎注册！</string>
    <string name="email">账 号:</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="verification_code">获取验证码</string>
    <string name="verification_code_hint">请输入验证码</string>
    <string name="qq_login">快速登录</string>

    <!--忘记密码-->
    <string name="updatepassword">修改密码</string>

    <!--更多Activity-->
    <string name="bangdingemail">绑定邮箱</string>
    <string name="feedback">用户反馈</string>
    <string name="updatemessage">资料修改</string>
    <string name="aboutus">关于我们</string>
    <string name="connectus">联系我们</string>
    <string name="shareapplication">分享软件</string>
    <string name="loginout">退出登录</string>

    <!--上传数据-->
    <string name="upload_center_title">数据采集</string>
    <string name="unknowlocation">暂未获取位置信息</string>
    <string name="locationmessage">地理信息</string>
    <string name="location">地理位置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
