<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity"
    android:background="@color/grey2">

    <com.lanling.view.TitlebarView
        android:id="@+id/forget_titlebarview"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/titlebar"
        app:centerTitle="@string/updatepassword"
        app:centerTextColor="#FFF"
        app:leftDrawble="@mipmap/fanhui3"
        app:leftText="@string/back"
        app:leftTextColor="#fff"
        />

    <RelativeLayout
        android:id="@+id/forgetpassword_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/forget_linearlayout1"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="邮 箱:"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/forget_email"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:inputType="textEmailAddress"
                android:hint="绑定的邮箱账号"
                android:layout_height="wrap_content" />

            </LinearLayout>

        <!--验证码-->
        <LinearLayout
            android:id="@+id/forget_linearlayout2"
            android:layout_below="@+id/forget_linearlayout1"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/forget_verification"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:hint="@string/verification_code_hint"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/forget_verification_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/validate_code_normal_bg"
                android:onClick="Forget_Verification_Button"
                android:text="@string/verification_code"
                android:layout_height="wrap_content" />
    </LinearLayout>

        <!--密码-->
        <LinearLayout
            android:layout_below="@+id/forget_linearlayout2"
            android:id="@+id/forget_linearlayout3"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="重置密码:"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/forget_password"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:maxLength="16"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/forget_button"
            android:layout_below="@+id/forget_linearlayout3"
            android:layout_centerHorizontal="true"
            android:text="@string/updatepassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/validate_code_normal_bg" />

</RelativeLayout>

</RelativeLayout>